Committing files